--- a/assets/style.css
+++ b/assets/style.css
@@ -25,7 +25,7 @@ header button {
 
 header time {
     font-size: 40px;
-    margin-right: 50px;
+    margin-right: 70px;
     margin-top: 15px;
 }
 
@@ -35,4 +35,20 @@ header time {
     height: 100px;
     font-size: 50px;
     align-self: center;
+}
+
+#initialsHS {
+    display: flex;
+    align-self: center;
+    width: 400px;
+    height: 50px;
+    font-size: 30px;
+}
+
+#submitHS {
+    display: flex;
+    align-self: center;
+    width: 80px;
+    height: 30px;
+    font-size: 20px;
 }
