--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,11 @@
     padding: 0;
     margin: 0;
     font-family: 'Courier New', Courier, monospace;
+    color: #DCE1E3;
 }
 
 body {
-    background-color: burlywood;
+    background-color: #5C5F58;
 }
 
 header {
@@ -15,15 +16,25 @@ header {
     padding-left: 20px;
 }
 
-header button {
+main {
+    display: flex;
+    justify-content: center;
+}
+
+#hsbutton {
     margin: 10px;
     width: 200px;
     height: 50px;
-    background-color: aquamarine;
+    background-color: #591C0B;
     font-size: 25px;
 }
 
-header time {
+#title {
+    font-size: 50px;
+    margin-top: 10px;
+}
+
+#timer {
     font-size: 40px;
     margin-right: 70px;
     margin-top: 15px;
@@ -31,10 +42,11 @@ header time {
 
 #start {
     margin: 50px;
+    margin-top: 250px;
     width: 400px;
     height: 100px;
     font-size: 50px;
-    align-self: center;
+    color: #5C5F58;
 }
 
 #initialsHS {
@@ -51,4 +63,20 @@ header time {
     width: 80px;
     height: 30px;
     font-size: 20px;
+}
+
+#home {
+    display: visible;
+}
+
+#quiz {
+    display: none;
+}
+
+#end {
+    display: none;
+}
+
+#highscore {
+    display: none;
 }
