--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,8 @@ body {
 header {
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
-    padding-left: 20px;
 }
 
 main {
@@ -30,14 +30,16 @@ main {
 }
 
 #title {
-    font-size: 50px;
+    font-size: 40px;
     margin-top: 10px;
 }
 
 #timer {
-    font-size: 40px;
+    display: none;
+    font-size: 20px;
     margin-right: 70px;
-    margin-top: 15px;
+    margin-top: 20px;
+    padding-left: 50px;
 }
 
 #start {
