--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,15 @@ main {
     padding: 10px;
 }
 
+#goHome {
+    margin-top: 50px;
+    background-color: #591C0B;
+    color:#DCE1E3;
+    width: 200px;
+    font-size: 50px;
+    align-self: center;
+}
+
 #home {
     display: visible;
 }
